[package]
authors = ["Hung-I Wang <whygowe@gmail.com>"]
edition = "2018"
name = "cidr-aggregator"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# cidr = "0.1"
num-traits = "0.2"
serde = {version = "1.0", features = ["derive"]}
structopt = "0.3"
itertools = "0.10"
lazy_static = "1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1", default-features = true, optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4", default-features = true, optional = true}
