[package]
name = "cidr-aggregator"
version = "0.1.0-1"
edition = "2021"
authors = ["Hung-I Wang <whygowe@gmail.com>"]
description = "Utilities for manipulating CIDR IP ranges. Supports both IPv4 and IPv6."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gowee/cidr-aggregator"
homepage = "https://cidr-aggregator.pages.dev"
keywords = ["cidr", "ip", "networking", "ipv4", "ipv6"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
exclude = ["web/", ".github/"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
cli = ["clap", "anyhow"]
wasm = ["serde", "wasm-bindgen"]

[dependencies]
num-traits = "0.2"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[[bin]]
name = "cidr-aggregator"
path = "src/main.rs"
required-features = ["cli"]
